Footer border top spacing fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,6 @@ html,
 body {
   overflow-x: hidden !important;
   scroll-behavior: smooth;
-  background: var(--primary-color);
 }
 * {
   margin: 0;
@@ -1374,9 +1373,6 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 
 /* Footer */
-.main-footer {
-  margin-top: 30px;
-}
 .footer-links {
   padding-bottom: 50px;
   & {
